--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@
 
 /* main reated styles*/
 
+.discout{
+    justify-content: center;
+}
+
+
 #discount-percent{
     color: red;
     font-size: 88px;
@@ -47,4 +52,65 @@
     text-align: center;
     font-size: 70px;
 }
+
+#midnight-party-title{
+    color: white;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7px;
+}
+
+.midnight-party{
+    display: flex;
+    background-image: url('resources/Vectorrr.png');
+    background-repeat: no-repeat;
+    margin-top: 30px;
+}
+
+#midnight-party-para{
+    color: white;
+}
+
+.address{
+    background-color: antiquewhite;
+    text-align: center;
+    width: 800px;
+    height: 400;
+    justify-content: center;
+    font-size: 40px;
+}
+
+#red{
+    color: red;
+}
+
+#join-now-btn{
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 3px;
+}
+
+.offers{
+    display: flex;
+    gap: 40px;
+    width: 1000px;
+    height: 400px;
+    margin: 100px ;
+}
+
+.happy-people-pic{
+    border: red solid 15px;
+    border-radius: 463px;
+}
+
+.holidays-offers{
+    text-align: center;
+}
+
+#fifty-parcnt-offers{
+    font-size: 60px;
+}
+    
 /* footer related styles*/
