--- a/styles.css
+++ b/styles.css
@@ -123,5 +123,34 @@
 #portfolio-heading{
     font-size: 60px;
 }
+
+.subscribe{
+    width: 1220px;
+    height: 416px;
+border: 1px red solid;
+background-color: rgba(255, 0, 0, 0.05);
+text-align: center;
+padding: 100px;
+margin: 120px;
+}
+
+#subscribe-heading{
+    font-size: 60px;
+}
+
+#email{
+    width: 380px;
+    height: 70px;
+    border-radius: 50px 0 0 50px;
+    color: rgba(7, 2, 17, 0.30);
+}
+
+#subscribe{
+    width: 180px;
+    height: 75px;
+    border-radius: 0 50px 50px 0;
+    background-color: red;
+    color: white;
+}
     
 /* footer related styles*/
