--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     border-radius: 15px;
     padding: ;
     justify-content: center;
+    margin: 15px 150px 15px 150px;
 }
 
 .banner-title{
@@ -32,6 +33,7 @@
 
 .discout{
     justify-content: center;
+    text-align: center;
 }
 
 
@@ -65,7 +67,7 @@
     display: flex;
     background-image: url('resources/Vectorrr.png');
     background-repeat: no-repeat;
-    margin-top: 30px;
+    margin: 15px 150px 15px 150px;
 }
 
 #midnight-party-para{
@@ -79,6 +81,8 @@
     height: 400;
     justify-content: center;
     font-size: 40px;
+    margin: 15px 150px 15px 150px;
+    
 }
 
 #red{
@@ -117,7 +121,7 @@
     width: 1400px;
     height: 1200px;
     justify-content: center;
-    margin: 50px 50px;
+    margin: 15px 150px 15px 150px;
 }
 
 #portfolio-heading{
@@ -154,3 +158,26 @@ margin: 120px;
 }
     
 /* footer related styles*/
+
+.footer{
+    background-color: black;
+    color: white;
+    padding: 30px;
+}
+
+#address-contact{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 15px;
+}
+
+#social-contacts{
+    align-items: center;
+    text-align: center;
+}
+
+#copyr8{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 15px; 
+}
